Fixed scrollbar problem for IV dialogs [HFJ-503 and HFJ-823 conflicting]

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -458,6 +458,7 @@
 /* interaction semantics wrapper */
 .h5p-interactivevideo-editor .h5p-dialog-inner {
   padding: 0 0.5em 0.5em;
+  box-sizing: border-box;
 }
 
 .h5p-interactivevideo-editor .h5p-dialog-inner .h5peditor-interaction-duration {
